# ASK-Claude-Token-Optimizer

./: .env.example  .gitignore  Cargo.toml  INSTALL-WINDOWS.md  LICENSE  README-LLM.md  README.md  ask-token-optimizer.service  install.ps1  setup.sh
hooks/: ask-filter.py  ask-filter.sh  ask-rewrite.py  ask-rewrite.sh
scripts/: ask-audit.py  release.sh
src/: aws_cmd.rs  cargo_cmd.rs  config.rs  container.rs  conversation.rs  curl_cmd.rs  deps.rs  diff_cmd.rs  dotnet_cmd.rs  env_cmd.rs  extract.rs  find_cmd.rs  format_cmd.rs  gain.rs  gh_cmd.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  gt_cmd.rs  integrity.rs  json_cmd.rs  lint_cmd.rs  log_cmd.rs  ls.rs  main.rs  mypy_cmd.rs  next_cmd.rs  npm_cmd.rs  output.rs  pip_cmd.rs  playwright_cmd.rs  pnpm_cmd.rs  prettier_cmd.rs  prisma_cmd.rs  psql_cmd.rs  pytest_cmd.rs  read.rs  relevance.rs  rewrite_cmd.rs  (+15 more)
src/discover/: mod.rs  provider.rs  registry.rs  report.rs  rules.rs
src/filters/: brew-install.toml
src/parser/: README.md  mod.rs
tests/fixtures/dotnet/: build_failed.txt  test_failed.txt
